samples/_failures_safe/1761337450_657b77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91779e3d.c: In function ‘main’:
./samples/SAFE/__tmp_91779e3d.c:155:28: error: missing terminating " character
  155 |                     printf("Error: Matrix
      |                            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_91779e3d.c:155:21: error: expected expression at end of input
  155 |                     printf("Error: Matrix
      |                     ^~~~~~
./samples/SAFE/__tmp_91779e3d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91779e3d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91779e3d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91779e3d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91779e3d.c:155:21: error: expected declaration or statement at end of input
